samples/_failures_safe/1761624734_a82c28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20959a4b.c: In function ‘main’:
./samples/SAFE/__tmp_20959a4b.c:150:9: error: expected declaration or statement at end of input
  150 |         printf("\nFiltered Log Entries:\n");
      |         ^~~~~~
./samples/SAFE/__tmp_20959a4b.c:150:9: error: expected declaration or statement at end of input
